--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,8 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="poster">cd_poster</string>
+    <string name="cd_poster">Poster</string>
+    <string name="cd_logo">Logo</string>
 
 </resources>
