feat(search): Refactor ui and place for search function

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="title_notifications">Notifications</string>
     <string name="poster">cd_poster</string>
     <string name="cd_poster">Poster</string>
+    <string name="cd_back">Button Back</string>
     <string name="cd_logo">Logo</string>
 
 </resources>
