--- a/features/search/src/main/res/values/strings.xml
+++ b/features/search/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="text_hint_search">Masukan kata kunci…</string>
+    <string name="message_empty_search">Pencarian tidak ditemukan…</string>
 </resources>
